tests/ucc/type/bad/switch-vs-struct.c
typedef struct a
{
    int a;
} my_struct;

int main(void)
{
    my_struct a;

    switch (a)
    {

    }

    return 0;
}
